WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129195
REGRESSION(
r164412
): Pixel cracks when zooming in to any web content.
https://bugs.webkit.org/show_bug.cgi?id=129195
Summary
REGRESSION(r164412): Pixel cracks when zooming in to any web content.
alan
Reported
2014-02-21 21:22:51 PST
1. Load any web page. 2. Pinch-zoom in. 3. 1 pixel width tile grid shows up.
Attachments
Patch
(3.03 KB, patch)
2014-02-21 21:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.87 KB, patch)
2014-02-21 22:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-02-21 21:23:38 PST
<
rdar://problem/16131028
>
alan
Comment 2
2014-02-21 21:40:05 PST
Created
attachment 224946
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-02-21 22:18:04 PST
Comment on
attachment 224946
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224946&action=review
> Source/WebCore/rendering/RenderLayerBacking.cpp:2243 > + LayoutRect dirtyRect(enclosingIntRect(clip)); > IntRect pixelSnappedRectForIntegralPositionedItems = pixelSnappedIntRect(dirtyRect);
Odd that you call pixelSnappedIntRect() on the result of enclosingIntRect(). Should it be an IntRect?
alan
Comment 4
2014-02-21 22:23:10 PST
(In reply to
comment #3
)
> (From update of
attachment 224946
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=224946&action=review
> > > Source/WebCore/rendering/RenderLayerBacking.cpp:2243 > > + LayoutRect dirtyRect(enclosingIntRect(clip)); > > IntRect pixelSnappedRectForIntegralPositionedItems = pixelSnappedIntRect(dirtyRect); > > Odd that you call pixelSnappedIntRect() on the result of enclosingIntRect(). Should it be an IntRect?
Yes, it looks odd, but I left it there so that when I clean up the paint rect clipping all I need to change back is the dirtyRect and the pixelSnappedRectForIntegralPositionedItems can stay as it is.
alan
Comment 5
2014-02-21 22:26:24 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (From update of
attachment 224946
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=224946&action=review
> > > > > Source/WebCore/rendering/RenderLayerBacking.cpp:2243 > > > + LayoutRect dirtyRect(enclosingIntRect(clip)); > > > IntRect pixelSnappedRectForIntegralPositionedItems = pixelSnappedIntRect(dirtyRect); > > > > Odd that you call pixelSnappedIntRect() on the result of enclosingIntRect(). Should it be an IntRect? > Yes, it looks odd, but I left it there so that when I clean up the paint rect clipping all I need to change back is the dirtyRect and the pixelSnappedRectForIntegralPositionedItems can stay as it is.
I guess I should remove it to not to cause any confusion. (as it might take a few days to get to the clipping cleanup)
Simon Fraser (smfr)
Comment 6
2014-02-21 22:29:57 PST
Just add a comment if you plan to come back to it.
alan
Comment 7
2014-02-21 22:38:24 PST
Created
attachment 224948
[details]
Patch
alan
Comment 8
2014-02-21 22:38:52 PST
Comment on
attachment 224948
[details]
Patch EWSing.
alan
Comment 9
2014-02-21 22:40:17 PST
(In reply to
comment #6
)
> Just add a comment if you plan to come back to it.
I prefer what you suggested first. It's more explicit that way. Thanks for the review.
WebKit Commit Bot
Comment 10
2014-02-21 23:19:24 PST
Comment on
attachment 224948
[details]
Patch Clearing flags on attachment: 224948 Committed
r164532
: <
http://trac.webkit.org/changeset/164532
>
WebKit Commit Bot
Comment 11
2014-02-21 23:19:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug