REGRESSION(r164412): Pixel cracks when zooming in to any web content. https://bugs.webkit.org/show_bug.cgi?id=129195

Reviewed by Simon Fraser.

Integral clipping of the repaint rect was prematurely removed in RenderLayerBacking::paintContents().
Repaint rects needs a uniform, device pixel precise clipping across the painting flow including RenderLayer,
RenderView and TileController.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintContents):
(WebCore::RenderLayerBacking::compositedBoundsIncludingMargin):


Canonical link: https://commits.webkit.org/147240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164532 268f45cc-cd09-0410-ab3c-d52691b4dbfc